Bug 52451 - UI: FILESAVE as Text (encoded) should offer .txt as file type and name extension
Summary: UI: FILESAVE as Text (encoded) should offer .txt as file type and name extension
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.2 rc
Hardware: x86 (IA32) Windows (All)
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.7.0 target:3.6.2
Keywords: regression
: 53071 53906 53991 54092 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-24 16:45 UTC by henerey
Modified: 2012-09-02 16:05 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description henerey 2012-07-24 16:45:46 UTC
I have a .odt file I like to edit, save, and then Save As a plaintext .txt

After I went to v3.6x that wasn't an option in Save As. I just reverted to v3.5.5 and it's back alive.

What happened?
Comment 1 Rainer Bielefeld Retired 2012-07-24 18:02:29 UTC
At least it is [Reproducible] with Server Installation of  "LibreOffice 3.6.0.2 rc  German UI/Locale [Build-ID:  815c576] on German WIN7 Home Premium (64bit) that there is not selection "text .txt" in LibO dialog 'File -> Save as' dialog.  Same in WIN OS dialog.

Worked with 3.5.5, so REGRESSION

At least I use LibO frequently as text editor, but this is chicken-feed, you can use "Save as Text .txt (Encoded), and modify the name extension in the file name pane.

But indeed. I think it would be less worrying if LibO WRITER would offer name extension .txt, what is more useful here than .csv (what can be offered as an option).

Reporter's description is very vague, so I hijack this one for the problem I observed.

@henerey@comcast.net
"lost ability" is a rather esoteric description ;-)
Please feel free to submit a new bug (with a more precise description of the problem due to  <http://wiki.documentfoundation.org/BugReport>
Comment 2 manj_k 2012-08-10 21:23:18 UTC
*** Bug 53071 has been marked as a duplicate of this bug. ***
Comment 3 Jean-Baptiste Faure 2012-08-11 07:03:54 UTC
For me where is the problem is that LO adds csv extension even if I give the txt extension to my filename. So I get a filename like a.txt.csv and if I try to reopen this file by double-clicking on its name in Nautilus it is opened by Calc instead of my default text editor (gedit).

Best regards. JBF
Comment 4 Rainer Bielefeld Retired 2012-08-19 07:14:39 UTC
I think it's a bug by definition to offer FILESAVE as .csv from Writer

Worked fine until Server installation (own profile) of "LibreOffice  3.5.6.2  German UI/Locale [Build-ID: e0fbe70-5879838-a0745b0-0cd1158-638b327] on German WIN7 Home Premium (64bit), so 3.6 regression

I think it's simply wrong to offer "save as .csv" for a writer text document from Writer.

Already broken with 
- Server installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: a502549]" (tinderbox: Win-x86@6-fast, pull time 2012-05-31 07:33:55)

Still worked fine 
- MinGW build 2012-08-26 what already has new style LibO File Dialog, tho this 
  problem seems not related to new dialog.
- with Server installation of  Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 475d0c5-829fc92-39746e8-206648e-fefd87]" (2012-02-14)

@Jean-Baptiste Faure
If "Auto Name extension" is activated that xxx.txt.csv might be more or less expected

@Michael:
I currently see this one as a WRITER problem. 
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf.
Comment 5 Michael Stahl (allotropia) 2012-08-20 10:02:23 UTC
Kohei, could this "Writer wants to save text file as .csv" be a result of your filter configuration/detection refactoring?
Comment 6 Kohei Yoshida 2012-08-20 19:30:36 UTC
I'll take a look.
Comment 7 Kohei Yoshida 2012-08-21 16:02:55 UTC
So, the code basically sees

*.csv;*.txt

for the text format type, then automatically takes the first item (*.csv), and ignores the rest.  This is the reason why you only see .csv in the save-as dialog.
Comment 8 Kohei Yoshida 2012-08-21 16:04:04 UTC
The exact line to look at 

http://opengrok.libreoffice.org/xref/core/sfx2/source/dialog/filtergrouping.cxx#930
Comment 9 Kohei Yoshida 2012-08-21 17:49:23 UTC
The original rationale behind the "why"

https://issues.apache.org/ooo/show_bug.cgi?id=32434
Comment 10 Not Assigned 2012-08-22 02:19:50 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ba03f2dc817c692fa8709391ec83d8e01a0f8b28

fdo#52451: Ensure that the extension for text is .txt from writer.
Comment 11 Not Assigned 2012-08-22 04:04:48 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84d1ff7be178ec3572710e092e85fe548ce3042b

fdo#52451: Use .txt extension for these guys too.
Comment 12 Not Assigned 2012-08-22 13:51:58 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=45b03c888042052a47cb79bc5a2837d04e115c5e

fdo#52451: Some name changes to be consistent with other prop names.
Comment 13 Kohei Yoshida 2012-08-22 14:30:13 UTC
Fixed on master (for 3.7.0). Sent a backport request to the mailing list for 3.6.2 (and 3.6.1 if people agree with my fix being safe).
Comment 14 Not Assigned 2012-08-22 18:56:39 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d632fa4d8fc6a42a58cb981865d6267d90951b69&g=libreoffice-3-6

fdo#52451: Ensure that the extension for text is .txt from writer.


It will be available in LibreOffice 3.6.2.
Comment 15 manj_k 2012-08-22 22:09:53 UTC
*** Bug 53906 has been marked as a duplicate of this bug. ***
Comment 16 manj_k 2012-08-24 10:01:31 UTC
*** Bug 53991 has been marked as a duplicate of this bug. ***
Comment 17 vitriol 2012-08-26 19:04:57 UTC
*** Bug 54092 has been marked as a duplicate of this bug. ***
Comment 18 manj_k 2012-09-02 16:05:59 UTC
*** Bug 53991 has been marked as a duplicate of this bug. ***